--- a/index.html
+++ b/index.html
@@ -22,66 +22,81 @@
 </head>
 <body>
     <!--Основной контент сайта-->
+    <!--Меню-->
+    <nav class="navbar d-md-none navbar-expand-md bg-dark navbar-dark sticky-top">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">prodaiZIP.ru</a>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="search">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Поиск</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Поиск по категории</a>
+                </li>
+            </ul>
+        </div>
+        <div class="collapse navbar-collapse" id="menu">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Услуги</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Турбо</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Отзывы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Цены</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Контакты</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
+
         <!--Верхнее меню-->
-        <div class="row" style="height: 40px">
-            <div class="col-md-7 d-none d-md-block" style="background-color: darkgray;">
-                <p>Логотип</p>
+        <div class="row menus">
+            <div class="col-md-7 d-none d-md-block menus" style="background-color: darkgray; padding: 0">
+                <img src="img/logo.png" style="height: 100%; width: auto;">
             </div>
-            <div class="col-1">
-                <div class="row" style="height: 100%">
-                    <div class="col-6" style="background-color: yellow;">
+            <div class="col-md-3 d-none d-md-block menus">
+                <div class="row menus" style="height: 100%">
+                    <div class="col-2 offset-md-2 menus" style="background-color: yellow;">
                         <p>Увед.</p>
                     </div>
-                    <div class="col-6" style="background-color: gray;">
+                    <div class="col-2 menus" style="background-color: gray;">
                         <p>Объяв.</p>
                     </div>
-                </div>
-            </div>
-            <div class="col-1" style="background-color: red;">
-                <p>Войти</p>
-            </div>
-            <div class="col-1" style="background-color: green;">
-                <img src="img/profile-default.png" style="width: auto; height: 40px;" class="img-fluid">
-            </div>
-            <div class="col-sm-2 d-block d-sm-none d-xl-block" style="background-color: hotpink;">
-                <p>Подать объявление</p>
-            </div>
-            <div class="col-sm-2 d-none d-sm-block d-xl-none" style="background-color: darkgrey;">
-                <p>Добавить</p>
-            </div>
-        </div>
-        <!--Меню-->
-        <nav class="navbar d-md-none navbar-expand-md bg-dark navbar-dark sticky-top">
-            <div class="container-fluid">
-                <a href="#" class="navbar-brand">KPlus</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="menu">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Главная</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Услуги</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Турбо</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Отзывы</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Цены</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Контакты</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+                    <div class="col-4 menus" style="background-color: red;">
+                        <p>Войти</p>
+                    </div>
+                    <div class="col-2 menus" style="background-color: green; padding: 0;">
+                        <img src="img/profile-default_v_1.png" style="width: 100%; height: 100%;">
+                     </div>
+                 </div>
+             </div>
+             <div class="col-sm-2 d-none d-xl-block menus" style="background-color: hotpink;">
+                 <p>Подать объявление</p>
+             </div>
+             <div class="col-sm-2 d-none d-md-block d-xl-none menus" style="background-color: darkgrey;">
+                 <p>Добавить</p>
+             </div>
+         </div>
+
     </div>
 <!--Второй слайд -->
 
