--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
                     <div class="col-2 menus" style="background-color: gray;">
                         <p>Объяв.</p>
                     </div>
-                    <div class="col-4 menus" style="background-color: red;">
-                        <p>Войти</p>
+                    <div class="col-4 menus">
+                        <button class="btn btn-info" style="height: 100%; width: 100%; background: white; color: #0f6674;">Войти</button>
                     </div>
-                    <div class="col-2 menus" style="background-color: green; padding: 0;">
+                    <div class="col-2 menus" style="padding: 0;">
                         <img src="img/profile-default_v_1.png" style="width: 100%; height: 100%;">
                      </div>
                  </div>
              </div>
-             <div class="col-sm-2 d-none d-xl-block menus" style="background-color: hotpink;">
-                 <p>Подать объявление</p>
+             <div class="col-sm-2 d-none d-xl-block menus">
+                 <button class="btn btn-danger" style="height: 100%; width: 100%; margin: 0; padding: 0;">Подать объявление</button>
              </div>
              <div class="col-sm-2 d-none d-md-block d-xl-none menus" style="background-color: darkgrey;">
                  <p>Добавить</p>
