--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <p>Объяв.</p>
                     </div>
                     <div class="col-4 menus">
-                        <button class="btn btn-info" style="height: 100%; width: 100%; background: white; color: #0f6674;">Войти</button>
+                        <button class="btn btn-info" style="height: 90%; width: 100%; border-radius: 20px; background: white; color: #0f6674;">Войти</button>
                     </div>
                     <div class="col-2 menus" style="padding: 0;">
                         <img src="img/profile-default_v_1.png" style="width: 100%; height: 100%;">
