--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
 
         <!--Верхнее меню-->
         <div class="row menus" style="margin-top: 20px;">
-            <div class="col-lg-7 col-md-5 d-none d-md-block menus" style="background-color: darkgray; padding: 0">
+            <div class="col-lg-7 col-md-6 d-none d-md-block menus" style="padding: 0">
                 <img src="img/logo.png" style="height: 100%; width: auto;">
             </div>
-            <div class="col-md-3 d-none d-md-block menus">
+            <div class="col-lg-3 col-md-4 d-none d-md-block menus">
                 <div class="row align-items-center menus" style="height: 100%">
-                    <div class="col-2 offset-lg-2 menus" style="padding: 0;">
+                    <div class="col-2 offset-2 menus" style="padding: 0;">
                         <span class="fa-stack fa-1x has-badge" data-count="4">
                             <i class="fa fa-circle fa-stack-2x" style="color: lightgray;"></i>
                             <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
                         </span>
                     </div>
-                    <div class="col-2 offset-1 offset-lg-0 menus" style="padding: 0px;">
+                    <div class="col-2 menus" style="padding: 0;">
                         <span class="fa-stack fa-1x has-badge" data-count="2">
                             <i class="fa fa-circle fa-stack-2x" style="color: lightgray;"></i>
                             <i class="fa fa-list fa-stack-1x" style="color: dimgray;"></i>
                         </span>
                     </div>
-                    <div class="col-4 offset-2 offset-lg-0 menus" style="vertical-align: center; padding: 0px 0px 0px 5px; margin: 0;">
-                        <button class="btn btn-info" style=" margin-top: 5px; padding: 0px; width: 90%; height: 80%; border-radius: 8px; background: white; color: #0f6674;">Войти</button>
+                    <div class="col-4 menus" style="vertical-align: center; padding: 0px 0px 0px 5px; margin: 0;">
+                        <button class="btn btn-info" style=" padding: 0px; width: 90%; height: 80%; border-radius: 8px; background: white; color: #0f6674;">Войти</button>
                     </div>
                     <div class="col-2 menus" style="padding: 0;">
                         <a href="profile.html">
@@ -98,10 +98,10 @@
                  </div>
              </div>
              <div class="col-sm-2 d-none d-xl-block menus">
-                 <button class="btn btn-danger" style="height: 100%; width: 100%; margin: 0; padding: 0;">Подать объявление</button>
+                 <button class="btn btn-danger" style="height: 80%; width: 100%; margin: 0; padding: 0;">Подать объявление</button>
              </div>
              <div class="col-sm-2 d-none d-md-block d-xl-none menus">
-                 <button class="btn btn-danger" style="height: 100%; width: 100%; margin: 0; padding: 0;">Добавить</button>
+                 <button class="btn btn-danger" style="height: 80%; width: 100%; margin: 0; padding: 0;">Добавить</button>
              </div>
          </div>
 
