--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!--Блок поиска-->
         <form>
             <div class="row" style="background: #03a9f4; border-radius: 4px; margin-top: 40px;">
-                <div class="form-row" style="width: 100%; padding: 20px 20px 0 20px;">
+                <div class="form-row" style="width: 100%; padding: 20px 20px 0 20px; margin: 0;">
                     <div class="form-group col-md-6">
                         <label for="inputZapros" class="col-form-label col-form-label-lg" style="color: white;">Что вы ищете</label>
                         <input type="text" class="form-control form-control-lg" id="inputZapros" placeholder="Плата форматера для HP P1005">
@@ -132,8 +132,8 @@
                         <button class="btn btn-warning btn-lg" style="width: 90%;">Поиск</button>
                     </div>
                 </div>
-                <div class="form-row" style="width: 100%; padding: 0 20px 20px 20px;">
-                    <div class="form-group col-md-6">
+                <div class="form-row" style="width: 100%; margin: 0; padding: 0 20px 0px 20px;">
+                    <div class="form-group col-lg-6 d-none d-lg-block">
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputCyti" class="col-form-label" style="color: white;">Местоположение</label>
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-lg-4 d-none d-lg-block">
                         <div class="form-row">
                             <div class="form-group col-md-5">
                                 <label for="inputPriceFrom" class="col-form-label" style="color: white;">Цена от</label>
@@ -167,12 +167,67 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-row" style="width: 100%; height: 30px; padding: 0 20px 0 20px; margin: 0; border-top: 1px solid #eee; color: white; background-color: #0398db; border-radius: 0 0 4px 4px;">
+                    <div class="form-group col-md-6 d-flex justify-content-start">
+                        <a style="color: white; text-decoration: none;" href="#">Очистить поиск</a>
+                    </div>
+                    <div class="form-group col-md-6 d-flex justify-content-end">
+                        <a style="color: white; text-decoration: none;" href="#">Показать все</a>
+                    </div>
+                </div>
             </div>
-
-
-
         </form>
-
+<!--Блок категорий-->
+        <div class="row justify-content-around" style="margin-top: 30px;">
+            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+                <span class="fa-stack">
+                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
+                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                </span>
+            </div>
+            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+                <span class="fa-stack">
+                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
+                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                </span>
+            </div>
+            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+                <span class="fa-stack">
+                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
+                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                </span>
+            </div>
+            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+                <span class="fa-stack">
+                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
+                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                </span>
+            </div>
+            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+                <span class="fa-stack">
+                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
+                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                </span>
+            </div>
+            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+                <span class="fa-stack">
+                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
+                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                </span>
+            </div>
+            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+                <span class="fa-stack">
+                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
+                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                </span>
+            </div>
+            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+                <span class="fa-stack">
+                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
+                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                </span>
+            </div>
+        </div>
     </div>
 <!--Второй слайд -->
 
