--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
                 <span class="fa-stack">
                     <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
+                    <i class="fa fa-print fa-stack-1x" style="color: dimgray;"></i>
                 </span>
             </div>
             <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
