--- a/index.html
+++ b/index.html
@@ -180,52 +180,114 @@
 <!--Блок категорий-->
         <div class="row justify-content-around" style="margin-top: 30px;">
             <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
-                <span class="fa-stack">
-                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                    <i class="fa fa-print fa-stack-1x" style="color: dimgray;"></i>
-                </span>
+                <div class="row" style="background: #0f6674;">
+                    <div class="col-12" style="background: pink;">
+                        <span class="fa-stack">
+                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
+                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                        </span>
+                    </div>
+                    <div class="col-12" style="background: palegoldenrod; font-size: 14px; text-align: center; margin-top: 10px;">
+                        <a href="#" style="color: black; text-decoration: none;">Принтеры / копиры</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain" style="background: pink;">
+                <div class="row" style="height: 100%; background: yellowgreen;">
+                    <div class="col-12" style="background: lightskyblue;">
+                        <span class="fa-stack">
+                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
+                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                        </span>
+                    </div>
+                    <div class="col-12" style="background: yellow; height: 100%; font-size: 14px; text-align: center; margin-top: 10px;">
+                        <a href="#" style="color: black; text-decoration: none;">Телефоны</a>
+                    </div>
+                </div>
             </div>
             <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
-                <span class="fa-stack">
-                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
-                </span>
+                <div class="row">
+                    <div class="col-12">
+                        <span class="fa-stack">
+                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
+                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                        </span>
+                    </div>
+                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
+                        <a href="#" style="color: black; text-decoration: none;">Планшеты</a>
+                    </div>
+                </div>
             </div>
             <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
-                <span class="fa-stack">
-                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
-                </span>
+                <div class="row">
+                    <div class="col-12">
+                        <span class="fa-stack">
+                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
+                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                        </span>
+                    </div>
+                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
+                        <a href="#" style="color: black; text-decoration: none;">Ноутбуки</a>
+                    </div>
+                </div>
             </div>
             <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
-                <span class="fa-stack">
-                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
-                </span>
+                <div class="row">
+                    <div class="col-12">
+                        <span class="fa-stack">
+                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
+                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                        </span>
+                    </div>
+                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
+                        <a href="#" style="color: black; text-decoration: none;">Мониторы / телевизоры</a>
+                    </div>
+                </div>
             </div>
             <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
-                <span class="fa-stack">
-                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
-                </span>
+                <div class="row">
+                    <div class="col-12">
+                        <span class="fa-stack">
+                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
+                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                        </span>
+                    </div>
+                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
+                        <a href="#" style="color: black; text-decoration: none;">Компьютеры / комплектующие</a>
+                    </div>
+                </div>
             </div>
             <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
-                <span class="fa-stack">
-                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
-                </span>
+                <div class="row">
+                    <div class="col-12">
+                        <span class="fa-stack">
+                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
+                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                        </span>
+                    </div>
+                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
+                        <a href="#" style="color: black; text-decoration: none;">Расходные материалы</a>
+                    </div>
+                </div>
             </div>
             <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
-                <span class="fa-stack">
-                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
-                </span>
+                <div class="row">
+                    <div class="col-12">
+                        <span class="fa-stack">
+                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
+                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                        </span>
+                    </div>
+                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
+                        <a href="#" style="color: black; text-decoration: none;">Прочее</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
-                <span class="fa-stack">
-                    <i class="fa fa-circle fa-stack-2x" style="color: #eee;"></i>
-                    <i class="fa fa-bell fa-stack-1x" style="color: dimgray;"></i>
-                </span>
+        </div>
+<!--Баннер-->
+        <div class="row" style="margin-top: 30px;">
+            <div class="col-12" style="background: pink;">
+                lorem ipsumn, asldkjf alidf a,sdhfka sdflkd flk
             </div>
         </div>
     </div>
