--- a/index.html
+++ b/index.html
@@ -179,33 +179,36 @@
         </form>
 <!--Блок категорий-->
         <div class="row justify-content-around" style="margin-top: 30px;">
-            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
-                <div class="row" style="background: #0f6674;">
-                    <div class="col-12" style="background: pink;">
-                        <span class="fa-stack">
-                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
-                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain categoryMainPrint">
+                <div class="row">
+                    <div class="col-12">
+                        <a href="#">
+                            <span class="fa-stack">
+                                <i class="fa fa-circle fa-stack-2x" style="text-shadow: 0px 0px 6px #ccc;"></i>
+                                <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
                         </span>
+                        </a>
                     </div>
-                    <div class="col-12" style="background: palegoldenrod; font-size: 14px; text-align: center; margin-top: 10px;">
+                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
                         <a href="#" style="color: black; text-decoration: none;">Принтеры / копиры</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain" style="background: pink;">
-                <div class="row" style="height: 100%; background: yellowgreen;">
-                    <div class="col-12" style="background: lightskyblue;">
+            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
+                <div class="row">
+                    <div class="col-12">
+                        <a href="#"
                         <span class="fa-stack">
                             <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
                             <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
                         </span>
                     </div>
-                    <div class="col-12" style="background: yellow; height: 100%; font-size: 14px; text-align: center; margin-top: 10px;">
+                    <div class="col-12" style="height: 100%; font-size: 14px; text-align: center; margin-top: 10px;">
                         <a href="#" style="color: black; text-decoration: none;">Телефоны</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -218,7 +221,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -231,7 +234,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -244,7 +247,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -257,7 +260,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -270,7 +273,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-center justify-content-center categoryMain">
+            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
