--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
         </form>
 <!--Блок категорий-->
         <div class="row justify-content-around" style="margin-top: 30px;">
-            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain categoryMainPrint">
+            <div class="col-md-1 categoryMain categoryMainPrint">
                 <div class="row">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
                                 <i class="fa fa-circle fa-stack-2x" style="text-shadow: 0px 0px 6px #ccc;"></i>
-                                <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                                <i class="fa fa-print fa-stack-1x" style="font-size: 0.5em;"></i>
                         </span>
                         </a>
                     </div>
@@ -194,21 +194,22 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
+            <div class="col-md-1 categoryMain">
                 <div class="row">
                     <div class="col-12">
-                        <a href="#"
-                        <span class="fa-stack">
-                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
-                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
-                        </span>
+                        <a href="#">
+                            <span class="fa-stack">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-phone fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                            </span>
+                        </a>
                     </div>
-                    <div class="col-12" style="height: 100%; font-size: 14px; text-align: center; margin-top: 10px;">
+                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
                         <a href="#" style="color: black; text-decoration: none;">Телефоны</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
+            <div class="col-md-1 categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -221,7 +222,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
+            <div class="col-md-1 categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -234,7 +235,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
+            <div class="col-md-1 categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -247,7 +248,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
+            <div class="col-md-1 categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -260,7 +261,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
+            <div class="col-md-1 categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
@@ -273,7 +274,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 d-flex align-items-start justify-content-center categoryMain">
+            <div class="col-md-1 categoryMain">
                 <div class="row">
                     <div class="col-12">
                         <span class="fa-stack">
