--- a/index.html
+++ b/index.html
@@ -184,114 +184,188 @@
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
-                                <i class="fa fa-circle fa-stack-2x" style="text-shadow: 0px 0px 6px #ccc;"></i>
-                                <i class="fa fa-print fa-stack-1x" style="font-size: 0.5em;"></i>
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-print fa-stack-1x"></i>
                         </span>
                         </a>
                     </div>
-                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
-                        <a href="#" style="color: black; text-decoration: none;">Принтеры / копиры</a>
+                    <div class="col-12 categoryMainCaption">
+                        <a href="#">Принтеры / копиры</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain">
+            <div class="col-md-1 categoryMain categoryMainPhone">
                 <div class="row">
                     <div class="col-12">
                         <a href="#">
                             <span class="fa-stack">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-phone fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
+                                <i class="fa fa-phone fa-stack-1x"></i>
                             </span>
                         </a>
                     </div>
-                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
-                        <a href="#" style="color: black; text-decoration: none;">Телефоны</a>
+                    <div class="col-12 categoryMainCaption">
+                        <a href="#">Телефоны</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain">
+            <div class="col-md-1 categoryMain categoryMainTab">
                 <div class="row">
                     <div class="col-12">
-                        <span class="fa-stack">
-                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
-                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
-                        </span>
+                        <a href="#">
+                            <span class="fa-stack">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-tablet fa-stack-1x"></i>
+                            </span>
+                        </a>
                     </div>
-                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
-                        <a href="#" style="color: black; text-decoration: none;">Планшеты</a>
+                    <div class="col-12 categoryMainCaption">
+                        <a href="#">Планшеты</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain">
+            <div class="col-md-1 categoryMain categoryMainNotebook">
                 <div class="row">
                     <div class="col-12">
-                        <span class="fa-stack">
-                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
-                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
-                        </span>
+                        <a href="#">
+                            <span class="fa-stack">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-laptop fa-stack-1x"></i>
+                            </span>
+                        </a>
                     </div>
-                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
-                        <a href="#" style="color: black; text-decoration: none;">Ноутбуки</a>
+                    <div class="col-12 categoryMainCaption">
+                        <a href="#">Ноутбуки</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain">
+            <div class="col-md-1 categoryMain categoryMainTV">
                 <div class="row">
                     <div class="col-12">
-                        <span class="fa-stack">
-                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
-                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
-                        </span>
+                        <a href="#">
+                            <span class="fa-stack">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-tv fa-stack-1x"></i>
+                            </span>
+                        </a>
                     </div>
-                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
-                        <a href="#" style="color: black; text-decoration: none;">Мониторы / телевизоры</a>
+                    <div class="col-12 categoryMainCaption">
+                        <a href="#">Мониторы / Телевизоры</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain">
+            <div class="col-md-1 categoryMain categoryMainPC">
                 <div class="row">
                     <div class="col-12">
-                        <span class="fa-stack">
-                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
-                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
-                        </span>
+                        <a href="#">
+                            <span class="fa-stack">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-desktop fa-stack-1x"></i>
+                            </span>
+                        </a>
                     </div>
-                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
-                        <a href="#" style="color: black; text-decoration: none;">Компьютеры / комплектующие</a>
+                    <div class="col-12 categoryMainCaption">
+                        <a href="#">Компьютеры / Комплектующие</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain">
+            <div class="col-md-1 categoryMain categoryMainRashodka">
                 <div class="row">
                     <div class="col-12">
-                        <span class="fa-stack">
-                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
-                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
-                        </span>
+                        <a href="#">
+                            <span class="fa-stack">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-cogs fa-stack-1x"></i>
+                            </span>
+                        </a>
                     </div>
-                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
-                        <a href="#" style="color: black; text-decoration: none;">Расходные материалы</a>
+                    <div class="col-12 categoryMainCaption">
+                        <a href="#">Расходные материалы</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-1 categoryMain">
+            <div class="col-md-1 categoryMain categoryMainOther">
                 <div class="row">
                     <div class="col-12">
-                        <span class="fa-stack">
-                            <i class="fa fa-circle fa-stack-2x" style="color: white; text-shadow: 0px 0px 6px #ccc;"></i>
-                            <i class="fa fa-print fa-stack-1x" style="color: dimgray; font-size: 0.5em;"></i>
-                        </span>
+                        <a href="#">
+                            <span class="fa-stack">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-plug fa-stack-1x"></i>
+                            </span>
+                        </a>
                     </div>
-                    <div class="col-12" style="font-size: 14px; text-align: center; margin-top: 10px;">
-                        <a href="#" style="color: black; text-decoration: none;">Прочее</a>
+                    <div class="col-12 categoryMainCaption">
+                        <a href="#">Прочее</a>
                     </div>
                 </div>
             </div>
         </div>
 <!--Баннер-->
         <div class="row" style="margin-top: 30px;">
-            <div class="col-12" style="background: pink;">
-                lorem ipsumn, asldkjf alidf a,sdhfka sdflkd flk
+            <div class="col-9 goodsMain">
+                <h5>Последние объявления</h5>
+                <div class="row align-items-end">
+                    <div class="col-4">
+                        <figure>
+                            <img src="img/print_str.jpg">
+                            <figcaption>
+                                <h6>Принтер Epson в рабочем состоянии как новый почти не печатал</h6>
+                                <p class="price">4500 руб.</p>
+                                <p class="city">г. Владивосток, ул. Краснознаменная, дом 18</p>
+                                <p class="dateTime">Сегодня, 12:06</p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-4">
+                        <figure>
+                            <img src="img/noutebook.jpg">
+                            <figcaption>
+                                <h6>Разбита матрица на запчасти ноутбук Lenovo</h6>
+                                <p class="price">2500 руб.</p>
+                                <p class="city">г. Москва</p>
+                                <p class="dateTime">Сегодня, 07:53</p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-4">
+                        <figure>
+                            <img src="img/printer_2.jpg">
+                            <figcaption>
+                                <h6>Samsung SCX-4200 на запчасти, не работает</h6>
+                                <p class="price">1000 руб.</p>
+                                <p class="city">г. Хабаровск, ул. Павла-Морозова, дом 43</p>
+                                <p class="dateTime">24.05.2021, 07:53</p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3 serviceProdaiZIP">
+                <h5>Сервисы ProdaiZIP</h5>
+                <div class="row">
+                    <div class="col-2">
+                        <i class="fa fa-shield-alt"></i>
+                    </div>
+                    <div class="col-10">
+                        <h6>Безопасная сделка</h6>
+                        <p>Проверка и отправка оборудования и ЗИП через партнеров ProdaiZIP</p>
+                    </div>
+                    <div class="col-2">
+                        <i class="fa fa-search"></i>
+                    </div>
+                    <div class="col-10">
+                        <h6>Быстрый поиск ЗИП</h6>
+                        <p>Отправьте запрос на поиск нужной запчасти сервис-партнерам ProdaiZIP по всей России</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--Баннеры -->
+        <div class="row">
+            <div class="col-12" style="padding-top: 30px;">
+                <p>
+                    Баннер или еще что то
+                </p>
             </div>
         </div>
     </div>
